# awmctrl

./: LICENSE.txt  README.md  awmctrl  awmctrl.py  pyproject.toml
